@@ -83,9 +83,10 @@
   }
 
   // Parallax
-  #main {
+  /*#main {
     background: transparent !important;
   }
+  */
   .parallax-window {
     background: transparent;
   }
